# ai-automation-portfolio

./: README.md
ai-projects/ai-sales-assistant/: .gitignore  README.es.md  README.md  alembic.ini  pyproject.toml  requirements.txt
ai-projects/ai-sales-assistant/alembic/: env.py
ai-projects/ai-sales-assistant/alembic/versions/: 977345fb5197_create_document_generations_table.py
ai-projects/ai-sales-assistant/app/: main.py
ai-projects/ai-sales-assistant/app/config/: settings.py
ai-projects/ai-sales-assistant/app/database/: base.py  session.py
ai-projects/ai-sales-assistant/app/models/: document_generation.py
ai-projects/ai-sales-assistant/app/repositories/: document_generation_repository.py
ai-projects/ai-sales-assistant/app/schemas/: document_generation.py
ai-projects/ai-sales-assistant/docs/adr/: ADR-001-Clean-Architecture.md  ADR-002-Why-FastAPI.md  ADR-003-Why-SQLAlchemy.md  ADR-004-Repository-Pattern.md  ADR-005-Service-Layer.md  ADR-006-Prompt-Engineering.md  ADR-007-Pydantic-Settings.md  ADR-008-SQLite-a-PostgreSQL.md  ADR-009-Preparacion-para-RAG.md
ai-projects/ai-sales-assistant/docs/specs/: SPEC-01-Product-Vision.md  SPEC-02-Functional-Requirements.md  SPEC-03-Non-Functional-Requirements.md  SPEC-05-Domain-Model.md  SPEC-06-Database.md  SPEC-07-API-Design.md  SPEC-08-Architecture.md  SPEC-09-Folder-Structure.md  SPEC-10-Roadmap.md
