[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-sales-assistant"
version = "0.1.0"
description = "AI Sales Assistant - Intelligent Commercial Assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
    { name = "Luciana Pinheiro" }
]